--- a/starter/secretMessageApp/public/index.html
+++ b/starter/secretMessageApp/public/index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/writeMessage.js"></script>
+     
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+
+  <script defer src="/__/firebase/8.3.1/firebase-app.js"></script>
+
+  <!-- include only the Firebase features as you need -->
+
+  <script defer src="/__/firebase/8.3.1/firebase-database.js"></script>
+
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
   </head>
 
   <body>
@@ -46,6 +56,7 @@
         </div>
       </div>
     </section>
+     <script defer src="js/viewMessages.js"></script>
   </body>
 
 </html>
