--- a/starter/secretMessageApp/public/index.html
+++ b/starter/secretMessageApp/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/writeMessage.js"></script>
+    <script defer src="js/writeMessage.js"></script>
      
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 
